SERVER-95627 Forwardize index bounds in collapseQuerySolution when IXSCAN scans backward (#27909)

GitOrigin-RevId: bb9ff59f845b4fb8740da83a1c061ca3cfd594f8